Mangling: support mangling of varargs even if it's not the last argument.

Example:
func a(arr: Int..., n: String)

fixes SR-1076